# celery_testing

./: Dockerfile.celery  Dockerfile.fastapi  README.md  celery.py  docker-compose.yml  main.py  pyproject.toml  tasks.py
app/: main.py  tasks.py
tests/: conftest.py  test_celery_tasks.py
